[UPDATE] CSS background style까지

--- a/01.CSS/index.html
+++ b/01.CSS/index.html
@@ -225,5 +225,96 @@
         <p style="white-space: pre-wrap; width: 180px;height: 100px;background-color: skyblue;">에버디벨에           방문해주셔서 감사합니다.</p>
         <!-- pre-line -->
         <p style="white-space: pre-line; width: 180px;height: 100px;background-color: skyblue;">에버디벨에           방문해주셔서 감사합니다.</p>
+    <br>
+    <hr>
+    <div style="font-size: 24px;font-weight: bold;">Padding</div>
+    <br><br>
+    <div style="background-color: skyblue;border: 2px groove hotpink; border-radius: 10px;">
+        <p>Hello, my name is David, Thank you for studying web in my homepage.</p>
+    </div>
+    <br>
+    <div style="width : 200px;height:200px;background-color: skyblue;border: 2px groove hotpink; border-radius: 10px;">
+        <p>Hello, my name is David, Thank you for studying web in my homepage.</p>
+    </div>
+    <br>
+    <div style="background-color: skyblue;border: 2px groove hotpink; border-radius: 10px; padding-left:50px">
+        <p>Hello, my name is David, Thank you for studying web in my homepage.</p>
+    </div>
+    <br>
+    <div style="widht:300px;height:100px;background-color: skyblue;border: 2px groove hotpink; border-radius: 10px; padding : 40px">
+        <p>Hello, my name is David, Thank you for studying web in my homepage.</p>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <div style="font-weight: bold;font-size: 24px;">Background CSS</div>
+    <br>
+    <div style="border : 2px groove #ff0000;background-color: rgb(98, 221, 243);">
+        <p>
+          <p style="font-size: 20px;">border style</p>
+           solid : 그냥 한줄<br>
+           dotted : 점으로 표현<br>
+           dashed : 점선으로 표현<br>
+           double : 두 줄로 표현<br>
+           groove : 입체감 있게 표현<br>
+           ridge : 볼록하게 표현<br>
+           inset : 들어가보이게 표현<br>
+           outset : 튀어나오게 표현<br>
+           <p style="font-size: 20p;">background-image</p>
+           reapet : 배경이미지가 가로와 세로로 계속 반복(기본)<br>
+           no-repeat : 한번만 나타납니다.<br>
+           repeat-x : 가로항향으로 반복합니다.<br>
+           repeat-y : 세로방향으로 반복합니다.<br>
+           background-position : 위치 설정
+
+        </p>
+    </div><br>
+    <div style="width: 500px; height:300px; background-image: url(../01.CSS/문열어.png); background-repeat: no-repeat; background-position: center; border: 2px groove #ff0000; border-radius:10px"></div>
+    <br><hr>
+    <div style="font-size: 24px; font-weight: bold;">OverFlow</div>
+    <div style="width: 500px; height: 300px; background-image: url(../01.CSS/gogo.png); background-repeat: no-repeat; background-position: center; overflow:scroll">
+        동유럽·중남미서 폭발적 성장…애플은 지난해보다 점유율 하락
+ 
+(서울=연합뉴스) 권영전 기자 = 삼성전자가 세계 태블릿PC 시장에서 1년 사이 판매량을 3.5배 이상 늘리고 시장점유율도 배 이상으로 확대한 것으로 나타났다.
+ 
+16일 미국의 시장조사업체 스트래티지애널리틱스(SA)에 따르면 삼성전자는 1분기 세계 시장에서 태블릿PC를 910만대 판매했다. 이는 지난해 같은 기간의 200만대에서 무려 355% 늘어난 수치다.
+ 
+시장점유율도 18.9%로 태블릿PC 시장에 진출한 이후 최고 기록을 달성했다. 전년 동기 7.6%의 2.5배에 해당하는 점유율이다.
+ 
+반면 애플은 1분기 1천950만대를 판매해 지난해 같은 기간의 1천180만대보다 65% 늘어나는 데 그쳤다. 이는 시장 전체의 연간 성장률 84%를 밑도는 기록이다.
+ 
+애플은 시장점유율도 지난해보다 4.4%포인트 감소한 40.4%를 기록했다.
+ 
+업계는 애플의 1분기 점유율 하락이 올해 연간 시장점유율 하락으로 이어질 가능성이 크다고 보고 있다. 2011∼2012년 애플은 하반기보다 상반기에 더 높은 시장점유율을 기록했다.
+ 
+삼성전자의 태블릿PC 성장은 동유럽과 중남미 시장에서의 선전에 힘입은 것이다.
+ 
+삼성전자는 1분기 동유럽 시장에서 전년보다 23%포인트 급성장한 33%의 점유율을 기록하며 애플을 제치고 1위에 등극했다. 중남미 시장에서도 지난해보다 19%포인트 상승한 31%의 점유율을 보였다.
+ 
+동유럽·중남미에서 1분기에 팔린 태블릿PC 10대 중 3대 이상이 삼성 제품이었던 셈이다.
+    </div><br><hr>
+
+    <div style="width: 500px; height: 300px; background-image: url(../01.CSS/gogo.png); background-repeat: no-repeat; background-position: center; background-attachment: scroll;">
+        동유럽·중남미서 폭발적 성장…애플은 지난해보다 점유율 하락
+ 
+(서울=연합뉴스) 권영전 기자 = 삼성전자가 세계 태블릿PC 시장에서 1년 사이 판매량을 3.5배 이상 늘리고 시장점유율도 배 이상으로 확대한 것으로 나타났다.
+ 
+16일 미국의 시장조사업체 스트래티지애널리틱스(SA)에 따르면 삼성전자는 1분기 세계 시장에서 태블릿PC를 910만대 판매했다. 이는 지난해 같은 기간의 200만대에서 무려 355% 늘어난 수치다.
+ 
+시장점유율도 18.9%로 태블릿PC 시장에 진출한 이후 최고 기록을 달성했다. 전년 동기 7.6%의 2.5배에 해당하는 점유율이다.
+ 
+반면 애플은 1분기 1천950만대를 판매해 지난해 같은 기간의 1천180만대보다 65% 늘어나는 데 그쳤다. 이는 시장 전체의 연간 성장률 84%를 밑도는 기록이다.
+ 
+애플은 시장점유율도 지난해보다 4.4%포인트 감소한 40.4%를 기록했다.
+ 
+업계는 애플의 1분기 점유율 하락이 올해 연간 시장점유율 하락으로 이어질 가능성이 크다고 보고 있다. 2011∼2012년 애플은 하반기보다 상반기에 더 높은 시장점유율을 기록했다.
+ 
+삼성전자의 태블릿PC 성장은 동유럽과 중남미 시장에서의 선전에 힘입은 것이다.
+ 
+삼성전자는 1분기 동유럽 시장에서 전년보다 23%포인트 급성장한 33%의 점유율을 기록하며 애플을 제치고 1위에 등극했다. 중남미 시장에서도 지난해보다 19%포인트 상승한 31%의 점유율을 보였다.
+ 
+동유럽·중남미에서 1분기에 팔린 태블릿PC 10대 중 3대 이상이 삼성 제품이었던 셈이다.
+    </div><br><br><br><br><br><br><hr>
+    
 </body>
 </html>
